@startuml

'src/edu/israel/segundasemana/poo/aprendendo_enums (FILE_PATH) do conteúdo desse diagrama'
enum EstadosBrasileiro {
SAO_PAULO("SP", "São Paulo")
RIO_DE_JANEIRO("RJ", "Rio de Janeiro")
MINAS_GERAIS("MG", "Minas Gerais")
BAHIA("BA", "Bahia")
RIO_GRANDE_DO_SUL("RS", "Rio Grande do Sul")
CEARA("CE", "Ceará")
// Estados totais: 27
}

class "EstadosBrasileiro (Campos e Métodos)" as ClasseEstados {
- final String sigla
- final String nome
+ String getNome()
+ String getSigla()
+ String getNomeMaiusculo()
- EstadosBrasileiro(String sigla, String nome)
}

class SistemaIbge {
+ void main(String[] args)
}


SistemaIbge "1 " --> "1..27 " EstadosBrasileiro : " utiliza"
EstadosBrasileiro --> ClasseEstados : contém
ClasseEstados --> EstadosBrasileiro : constrói

note right of EstadosBrasileiro
Cada estado possui:
- sigla (ex: SP, RJ)
- nome (ex: São Paulo, Rio de Janeiro)
end note

@enduml
